feat: Implement ticket purchasing functionality
- Added TicketPurchaseRequest and TicketPurchaseResponse DTOs for handling ticket purchase requests and responses.
- Introduced TicketService and TicketServiceImpl to manage ticket purchasing logic.
- Updated EventController to include a new endpoint for purchasing tickets.
- Created TicketPurchaseSummary model to encapsulate ticket and event details after a purchase.
- Added TicketRepository for database interactions related to tickets.
- Implemented EventMapper and TicketMapper for converting between entity and model layers.
- Enhanced GlobalExceptionHandler to manage TicketPurchaseException.
- Updated database migration script to add necessary columns and constraints for ticket purchases.
- Modified EventServiceImpl to utilize EventMapper for entity to model conversion.
- Updated frontend service and components to support ticket purchasing, including UI changes for ticket purchase interactions.